RESOLVED FIXED71837
[WK2][GTK] The default database & local storage directory names should note they exist for Gtk port's needs
https://bugs.webkit.org/show_bug.cgi?id=71837
Summary [WK2][GTK] The default database & local storage directory names should note t...
Zan Dobersek
Reported 2011-11-08 11:04:50 PST
Currently, database directory is normally located at ~/.local/share/webkit/databases. The name should note that the directory is created by and used for purposes of the Gtk port.
Attachments
Patch (2.15 KB, patch)
2011-11-08 11:24 PST, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2011-11-08 11:07:34 PST
The same goes for local storage directory, so I'll just expand this bug to cover that too.
Zan Dobersek
Comment 2 2011-11-08 11:24:17 PST
WebKit Review Bot
Comment 3 2011-11-08 12:10:58 PST
Comment on attachment 114122 [details] Patch Clearing flags on attachment: 114122 Committed r99603: <http://trac.webkit.org/changeset/99603>
WebKit Review Bot
Comment 4 2011-11-08 12:11:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.