[WK2][GTK] The default database & local storage directory names should note they exist for Gtk port's needs https://bugs.webkit.org/show_bug.cgi?id=71837

Patch by Zan Dobersek <zandobersek@gmail.com> on 2011-11-08
Reviewed by Martin Robinson.

Ensure that directories for databases and local storage are in a 'webkitgtk'
directory in current user's data directory, noting they originate from the Gtk port.

* UIProcess/gtk/WebContextGtk.cpp:
(WebKit::WebContext::platformDefaultDatabaseDirectory):
(WebKit::WebContext::platformDefaultLocalStorageDirectory):

git-svn-id: svn://svn.chromium.org/blink/trunk@99603 bbb929c8-8fbe-4397-9dbb-9b2b20218538